# TS341

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  app.py  cahier_des_charges.md  dockerfile  pyproject.toml  rapport_technique.md
tests/: __init__.py  yolo_algo.py
ts341_project/: ProcessingResult.py  ProcessingStats.py  STRUCTURE.md  VideoProcessor.py  VideoReader.py  __init__.py  alpha_beta.py  kalman.py  logging_config.py  logging_utils.py  main.py  new_main.py  script_test1_pauline.py  script_test_cesar.py
ts341_project/display/: DisplayProcess.py  __init__.py
ts341_project/movement_detection/: mog2.py  optical_flow.py
ts341_project/pipeline/: PipelineProcessor.py  Pipelines.py  ProcessingPipeline.py  __init__.py
ts341_project/pipeline/image_block/: CannyEdgeBlock.py  ColorFilterBlock.py  ColorScaleBlock.py  GaussianBlurBlock.py  GrayscaleBlock.py  HistogramEqualizationBlock.py  MetadataOverlayBlock.py  MorphologyBlock.py  ORBMatchingBlock.py  ProcessingBlock.py  ResizeBlock.py  ThresholdBlock.py  __init__.py
ts341_project/pipeline/video_block/: BackgroundSubtractorBlock.py  ContourMatchingBlock.py  CustomDroneBlock.py  MotionDetectionBlock.py  StatefulProcessingBlock.py  __init__.py
ts341_project/storage/: StorageProcess.py  __init__.py
