[project]
name = "TS341"
version = "0.1.0"
description = "A python package for TS341"
authors = [
    { name = "Pauline ROBLIN", email = "problin@ensc.fr" }, 
    { name = "Hugo BASTIEN", email = "hbastien@enseirb-marmeca.fr" }
]
readme = "README.md"

[tool.poetry]
packages = [
    {include = "ts341_project"},
]

[build-system] 
requires = ["poetry.core >=2.0.0, <3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"

# Vision et traitement vidéo
opencv-python = "^4.10"    # OpenCV pour lire, traiter, détecter sur les images/vidéos
numpy = "^1.26"            # Calcul matriciel, base pour OpenCV et le traitement numérique
scipy = "^1.12"            # Outils scientifiques, filtrage, interpolations, optimisation

# Visualisation et interfaces
matplotlib = "^3.8"        # Graphiques, courbes, visualisation de trajectoires et métriques
# Suivi et décision
filterpy = "^1.4"      # Filtres de Kalman et suivi de trajectoire (fork maintenu de FilterPy)

# Interface web
streamlit = "^1.33.0"

# Logs
loguru = "^0.7"            # Logs lisibles et structurés pour le suivi des traitements


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"   # Tests unitaires
black = "^24.0"   # Formatage auto
flake8 = ">=6.1"   # Linter
pylint = "^3.0"   # Analyse plus stricte
mypy = "^1.6"     # Vérification des types
isort = "5.12.0"
autoflake = "^2.3.1"
docformatter = "^1.7.7"

[tool.poetry.scripts]
multiprocess = "ts341_project.new_main:main"

[tool.black]
line-length = 79

[tool.flake8]
ignore = "E203"

